GUI working and running ROS