@@ -7,7 +7,13 @@ import java.awt.FlowLayout;
 import java.awt.GridLayout;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
+import java.net.URL;
+import java.util.ArrayList;
+import java.util.List;
 
+import javax.swing.ImageIcon;
 import javax.swing.JButton;
 import javax.swing.JFrame;
 import javax.swing.JLabel;
@@ -40,6 +46,7 @@ public class MainFrame extends JFrame{
 	// Main Panel/Pane(s)
 	private JPanel _topFeatures;
 	private JPanel _features;
+	private JPanel _logoPanel;
 
 	// Holds the user-friendly buttons.
 	private JPanel _bigButtons; 
@@ -48,26 +55,37 @@ public class MainFrame extends JFrame{
 	private JButton _defaultButton; 
 	private JButton _customButton; 
 	private JButton _testButton;
+	private URL _logoURL = getClass().getResource("Logo.png");
 
 	// Singleton constructor.
 	protected MainFrame(){
 
 		_features = new JPanel(new FlowLayout(FlowLayout.LEFT, 0, 0));
-		_features.setPreferredSize(new Dimension(640, 360));
+		_features.setPreferredSize(new Dimension(540, 360));
 		_features.setBackground(Color.DARK_GRAY);
 		add(_features, BorderLayout.NORTH);
 
+		final List<JTextField> fields = new ArrayList<JTextField>();
+		
 		String[] labels = {"Tree height: ", "Row width: ", "Number of rows: ", "Column Length: ", "Post Spacing: "};
 		int numPairs = labels.length;
 		
 		_topFeatures = new JPanel(new SpringLayout());
-		_topFeatures.setPreferredSize(new Dimension(640,260));
+		_topFeatures.setPreferredSize(new Dimension(180,260));
 		_topFeatures.setBackground(Color.LIGHT_GRAY);
+		
+		_logoPanel = new JPanel(new FlowLayout(FlowLayout.LEFT, 0, 0));
+		_logoPanel.setPreferredSize(new Dimension(360,260));
+		
+		ImageIcon _speedkiwi = new ImageIcon(_logoURL);
+		JLabel _logoLabel = new JLabel("", _speedkiwi, JLabel.CENTER);
+		_logoPanel.add(_logoLabel, BorderLayout.CENTER);
 		
 		for (int i = 0; i < numPairs; i++) {
 		    JLabel l = new JLabel(labels[i], JLabel.TRAILING);
 		    _topFeatures.add(l);
 		    JTextField textField = new JTextField(10);
+		    fields.add(textField);
 		    l.setLabelFor(textField);
 		    _topFeatures.add(textField);
 		}
@@ -79,10 +97,11 @@ public class MainFrame extends JFrame{
 		                                6, 6);       //xPad, yPad
 		
 		_features.add(_topFeatures, BorderLayout.NORTH);
+		_features.add(_logoPanel, BorderLayout.NORTH);
 
 		// A panel containing the three buttons: Default, Configure and Test
 		_bigButtons = new JPanel(new GridLayout(1,3,0,0));
-		_bigButtons.setPreferredSize(new Dimension(640,100));
+		_bigButtons.setPreferredSize(new Dimension(540,100));
 		_bigButtons.setBackground(Color.LIGHT_GRAY);
 		_features.add(_bigButtons, BorderLayout.SOUTH);
 
@@ -103,18 +122,11 @@ public class MainFrame extends JFrame{
 			@Override
 			public void actionPerformed(ActionEvent arg0) {
 				try {
-					
-					//TODO
-					// KAREN, these COMMANDS WONT RUN!
 					String cwd = System.getProperty("user.dir");
-					System.out.println(cwd);
-					String upperFolder = cwd.substring(0, cwd.lastIndexOf("/"));
-					System.out.println(upperFolder);
-					//System.setProperty("user.dir", upperFolder);
-					
-					//runBashCommand("source devel/setup.bash");
-					//runPython("src/speedkiwi_core/world/Default_World/WorldConfiguration.py");
-					//runBashCommand("roslaunch speedkiwi_core DefaultLaunch.launch");	
+					String scriptFile = cwd + "/run1.sh";
+					String cmd = scriptFile + " d 2>&1  ";
+					System.out.println(execShell(cmd));
+					execShell(cmd);
 				} catch (Exception e) {
 					// TODO Auto-generated catch block
 					e.printStackTrace();
@@ -128,7 +140,17 @@ public class MainFrame extends JFrame{
 			@Override
 			public void actionPerformed(ActionEvent arg0) {
 				try {
+					CreateXMLFileJava._treeHeight = fields.get(0).getText();
+					CreateXMLFileJava._rowWidth = fields.get(1).getText();
+					CreateXMLFileJava._rowNumber = fields.get(2).getText();
+					CreateXMLFileJava._columnLength = fields.get(3).getText();
+					CreateXMLFileJava._postSpacing = fields.get(4).getText();
 					CreateXMLFileJava.GenerateXML();
+					String cwd = System.getProperty("user.dir");
+					String scriptFile = cwd + "/run1.sh";
+					String cmd = scriptFile + " c 2>&1  ";
+					System.out.println(execShell(cmd));
+					execShell(cmd);
 					//runBashCommand("python src/speedkiwi_core/world/Generated_World/WorldConfiguration.py");
 					//runBashCommand("roslaunch speedkiwi_core GeneratedLaunch.launch");	
 				} catch (Exception e) {
@@ -144,8 +166,11 @@ public class MainFrame extends JFrame{
 			@Override
 			public void actionPerformed(ActionEvent arg0) {
 				try {
-					runBashCommand("python src/speedkiwi_core/world/Default_World/WorldConfiguration.py");
-					runBashCommand("roslaunch speedkiwi_core DefaultLaunch.launch");	
+					String cwd = System.getProperty("user.dir");
+					String scriptFile = cwd + "/run1.sh";
+					String cmd = scriptFile + " t 2>&1  ";
+					System.out.println(execShell(cmd));
+					execShell(cmd);
 				} catch (Exception e) {
 					// TODO Auto-generated catch block
 					e.printStackTrace();
@@ -163,16 +188,23 @@ public class MainFrame extends JFrame{
 	}
 
 
-	static Process runBashCommand(String cmd) throws Exception{
-		ProcessBuilder s = new ProcessBuilder("/bin/bash", "-c",cmd);
-		Process sProcess=s.start();
-		return sProcess;
-	}
-	
-	static Process runPython(String fileName) throws Exception {
-		ProcessBuilder pb = new ProcessBuilder("python", fileName);
-		Process process = pb.start();
-		return process;
+	public static String execShell(String command) {
+		try {
+			Process p = Runtime.getRuntime().exec(new String[]{"bash","-c",command});
+			BufferedReader reader = 
+				  new BufferedReader(new InputStreamReader(p.getInputStream()));
+
+			StringBuilder sb = new StringBuilder();
+            String line;
+            while ((line = reader.readLine())!= null) {
+                sb.append(line);
+                sb.append("\n");
+            }
+			return sb.toString();
+		} catch (Exception e) {
+			return null;
+		}
+
 	}
 
 }
